--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer class="footer">
-        DESIGNED BY SUNNY SAINI
+        DEVELOPED BY SUNNY SAINI
     </footer>
 
     <script src="files/script.js"></script>
